/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 * <p>
 * http://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package lance_index.pb;

import "google/protobuf/timestamp.proto";


// Index file footer
message Footer {
  // Index type
  enum Type {
    // Default unknown value
    UNKNOWN = 0;
    // Approximate nearest neighbour
    ANN = 1;
  }
  // The type of the index.
  Type index_type = 1;

  //
  uint64 version = 2;

  // The creation time of this index.
  google.protobuf.Timestamp created_at = 3;

  repeated string columns = 4;

  oneof impl {
    AnnIndex ann_index = 5;
  }
}

message AnnIndex {
  enum Type {
    FLAT = 0;
    IVF_PQ = 1;
  }
  Type type = 1;

  // Dimension of the vector.
  uint32 dim = 2;
}